tests/ok/match-symbolic-product.ari
fn main() -> i64 {
  let first = match (50000u16, false) {
    (0u16..=32767u16, false) => 1,
    (32768u16..=65535u16, false) => 2,
    (0u16..=65535u16, true) => 3,
  };

  let second = match (1u16, true) {
    (0u16..=32767u16, false) => 1,
    (32768u16..=65535u16, false) => 2,
    (0u16..=65535u16, true) => 3,
  };

  let third = match (42u16, true, false) {
    (0u16..=100u16, .., false) => 4,
    (0u16..=100u16, .., true) => 5,
    (101u16..=65535u16, ..) => 6,
  };

  return first + second + third;
}
